# crm-bot

./: .gitignore  README.md  pyproject.toml
src/: agent.py  prompts.py  tools.py
src/.adk/: session.db
